修改CNAME的路径

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://yiyuanlu.github.io
+url: http://yiyuan129.com
 title: 小木之林
 subtitle: 记录技术上的点滴
 author: 小木
